fix: Title overflow ellipsis

--- a/components/EditableTitle.module.scss
+++ b/components/EditableTitle.module.scss
@@ -3,4 +3,5 @@
   font-family: "EquinorMono";
   padding: 10.6px;
   letter-spacing: 0.17ch;
+  text-overflow: ellipsis;
 }
